# tp2_concurrentes

./: README.md
common/: Cargo.toml
common/src/modules/: constants.rs  disconnect.rs  mod.rs  order_json.rs  order_prep.rs  order_request.rs  payment_capture.rs  payment_confirmation.rs
gateway/: Cargo.toml
gateway/src/: gateway.rs  main.rs
robots/: Cargo.toml
robots/src/: flavour.rs  main.rs  robot.rs
screens/: Cargo.toml
screens/orders/: pedidos_0.jsonl  pedidos_1.jsonl  pedidos_2.jsonl
screens/src/: main.rs
screens/src/modules/: connections.rs  init.rs  mod.rs  parser.rs  screen.rs  utils.rs
