[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-rt = "2.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["io-util"] }
common = { path = "../common" }
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"