[package]
name = "robots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
actix = "0.13.3"
actix-rt = "2.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["io-util"] }
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }